# SensorDashboard

./: .gitignore  README.md
MQTT_Simulator/: MqttGateway.py  simulator.py
Simulator_Ubuntu/: main.c
qt_Dashboard/: CMakeLists.txt  IMessageBus.cpp  IMessageBus.h  Main.qml  MqttMessageBus.cpp  MqttMessageBus.h  RpmsgMessageBus.cpp  RpmsgMessageBus.h  SensorModel.cpp  SensorModel.h  main.cpp
